login with orp verify done

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGODB_URL=mongodb+srv://manaspipeproject:DFUvRZZAvxLe7Qdl@cluster0.yqas6rt.mongodb.net/elred
 JWT_SECRET=2b$15$eHABx0vnMGmZUbXA.EjMiOQSXlyf3GSuhSQUP5suUEWDz/VZgvSkK
+EMAIL=Programming2hars@gmail.com
+PASSWORD=rfgeqlbbhwhtsyko
